--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.3"
 services:
   app:
-    image: ddthuong/nginx:latest
+    image: anhtuan98a2/nginx:latest
     ports:
       - "80:80"
